fix media-query form contact

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
         <div class="head">
           <div class="header">
             <div class="square"></div>
-            <h1>Contáctanos</h1>
+            <h1>Contacto</h1>
             <div class="square"></div>
           </div>
         
@@ -382,7 +382,7 @@
             </div>
 
             <div class="row">
-              <textarea name="" id="" cols="30" rows="7" placeholder="Mensaje"></textarea>
+              <textarea name="" id="" placeholder="Mensaje"></textarea>
             </div>
 
             <div class="row">
